# Email-Triage-OpenEnv

./: .gitignore  Dockerfile  README.md  README_spaces.md  api_server.py  app.py  check_routes.py  check_routes_test.py  cli.py  fetch_gmail.py  h origin main  inference.py  logging_utils.py  openenv.yaml  pyproject.toml  requirements.txt  validation_results.json
app/: globals.css  layout.tsx  page.tsx
components/: code-preview.tsx  features-section.tsx  footer.tsx  header.tsx  hero.tsx  tasks-section.tsx
email_triage_env/: __init__.py  email_generator.py  environment.py  models.py  tasks.py
email_triage_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
env/: __init__.py  email_generator.py  environment.py  models.py  reward.py  tasks.py
scripts/: analyze_variance.py  baseline_inference.py  plot_results.py  run_baseline.py  validate_env.py  validate_phase1.py
user/: # Code Citations.md
