[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email management and classification system for intelligent inbox organization"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["email", "triage", "organization", "productivity", "classification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
web = [
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
inference = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "email-triage-env[web,inference,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/email-triage"
Repository = "https://github.com/yourusername/email-triage"
Documentation = "https://github.com/yourusername/email-triage"

[project.scripts]
email-triage-validate = "scripts.validate_env:main"
email-triage-baseline = "scripts.baseline_inference:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["email_triage_env*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
